[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/game_setup.gd" id="1_game_setup"]

[node name="GameSetup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game_setup")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "New Game Setup"
horizontal_alignment = 1

[node name="SettingsContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PlayerCountContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
alignment = 1

[node name="PlayerCountLabel" type="Label" parent="CenterContainer/VBoxContainer/SettingsContainer/PlayerCountContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Total Players:"

[node name="PlayerCountSpinBox" type="SpinBox" parent="CenterContainer/VBoxContainer/SettingsContainer/PlayerCountContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
min_value = 4.0
max_value = 8.0
value = 4.0

[node name="HumanCountContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/SettingsContainer"]
layout_mode = 2
alignment = 1

[node name="HumanCountLabel" type="Label" parent="CenterContainer/VBoxContainer/SettingsContainer/HumanCountContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Human Players:"

[node name="HumanCountSpinBox" type="SpinBox" parent="CenterContainer/VBoxContainer/SettingsContainer/HumanCountContainer"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 18
min_value = 1.0
max_value = 8.0
value = 1.0

[node name="PlayerPreviewContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="PreviewLabel" type="Label" parent="CenterContainer/VBoxContainer/PlayerPreviewContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Player Slots:"
horizontal_alignment = 1

[node name="PlayerPreview" type="VBoxContainer" parent="CenterContainer/VBoxContainer/PlayerPreviewContainer"]
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_override_constants/separation = 5

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="StartGameButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Start Game"
